--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "react": "^0.14.8",
-    "react-native": "^0.22.2"
+    "react-native": "^0.22.2",
+    "react-native-form": "^2.0.5",
+    "react-native-gifted-form": "0.0.6"
   }
 }
