--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "react-native": "^0.26.0",
     "react-native-form": "^2.0.6",
     "react-native-gifted-form": "0.0.7"
+  },
+  "engines": {
+    "node": ">= 6.0.0"
   }
 }
