--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "apsl-react-native-button": "^2.5.0",
     "bird-locations": "^0.2.3",
+    "ebird": "^0.5.0",
     "ebird-js": "^0.1.0",
     "firebase": "^3.0.1",
     "kue": "^0.11.0",
